[gd_scene load_steps=26 format=2]

[ext_resource path="res://PopUpSkin.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://kaisouko_look_2p.png" type="Texture" id=3]
[ext_resource path="res://kaisouko_look.png" type="Texture" id=4]
[ext_resource path="res://kaisouko_look_default.png" type="Texture" id=5]
[ext_resource path="res://skinButton.gd" type="Script" id=6]
[ext_resource path="res://arrow.png" type="Texture" id=7]
[ext_resource path="res://krita/kyou/kyou_look.png" type="Texture" id=8]
[ext_resource path="res://krita/jean/jean_look.png" type="Texture" id=9]
[ext_resource path="res://bazooka.png" type="Texture" id=10]
[ext_resource path="res://pause1.wav" type="AudioStream" id=11]
[ext_resource path="res://pause2.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/awp_clipin.wav" type="AudioStream" id=13]
[ext_resource path="res://sfx/awp_clipout.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx/star02.wav" type="AudioStream" id=15]
[ext_resource path="res://sprite/Xbutton.png" type="Texture" id=16]
[ext_resource path="res://sprite/Xbutton_red.png" type="Texture" id=17]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.203922, 0.203922, 0.203922, 0.890196 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "bazooka_off"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.447059, 0.933333, 0.227451, 0.890196 ), Color( 0.945098, 0.913725, 0.913725, 0.890196 ), Color( 1, 1, 1, 0.890196 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}

[sub_resource type="Animation" id=7]
resource_name = "bazooka_on"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.203922, 0.203922, 0.203922, 0.890196 ), Color( 0.737255, 0.984314, 0.627451, 0.890196 ), Color( 1, 1, 1, 0.890196 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}

[sub_resource type="Animation" id=6]
resource_name = "bazooka_shine"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.203922, 0.203922, 0.203922, 0.890196 ), Color( 1, 1, 1, 0.890196 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 15 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "bazooka_off"
length = 0.3
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0150464,
"start_offset": 0.0,
"stream": ExtResource( 14 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "bazooka_on"
length = 0.3
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 13 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}

[node name="PopupSkin" type="Control"]
margin_right = 1664.0
margin_bottom = 896.0
script = ExtResource( 1 )

[node name="ToggleVisibilityButton" type="Button" parent="."]
margin_left = -384.0
margin_top = -256.0
margin_right = 2048.0
margin_bottom = 1152.0
flat = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0352941, 0.0352941, 0.890196 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.281
margin_bottom = 20.128
custom_fonts/font = ExtResource( 2 )
text = "Get all Skins XD"
align = 1
valign = 1
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 0.214
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.255981

[node name="Arrow" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 1664.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="default" type="Button" parent="VBoxContainer2/Arrow"]
modulate = Color( 0.427451, 1, 0.247059, 0 )
margin_right = 329.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="mizugi" type="Button" parent="VBoxContainer2/Arrow"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 333.0
margin_right = 663.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="mizugi_b" type="Button" parent="VBoxContainer2/Arrow"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 667.0
margin_right = 996.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="2p" type="Button" parent="VBoxContainer2/Arrow"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1000.0
margin_right = 1330.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="2p_b" type="Button" parent="VBoxContainer2/Arrow"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1334.0
margin_right = 1664.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 138.0
margin_right = 1664.0
margin_bottom = 704.0
size_flags_vertical = 3

[node name="default" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_right = 329.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
flat = true
icon_align = 1
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": "item name is in node's name
please don't change node's name"
}

[node name="mizugi" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_left = 333.0
margin_right = 663.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 4 )
flat = true
icon_align = 1
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": "item name is in node's name
please don't change node's name"
}

[node name="mizugi_b" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_left = 667.0
margin_right = 996.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 9 )
flat = true
icon_align = 1
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": "item name is in node's name
please don't change node's name"
}

[node name="2p" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_left = 1000.0
margin_right = 1330.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 3 )
flat = true
icon_align = 1
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": "item name is in node's name
please don't change node's name"
}

[node name="2p_b" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_left = 1334.0
margin_right = 1664.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 8 )
flat = true
icon_align = 1
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": "item name is in node's name
please don't change node's name"
}

[node name="BazookaButton" type="Button" parent="."]
modulate = Color( 0.203922, 0.203922, 0.203922, 0.890196 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -268.0
margin_bottom = 128.0
disabled = true
toggle_mode = true
icon = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BazookaButton"]
anims/RESET = SubResource( 5 )
anims/bazooka_off = SubResource( 8 )
anims/bazooka_on = SubResource( 7 )
anims/bazooka_shine = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BazookaButton"]
stream = ExtResource( 15 )
volume_db = -8.0

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bazooka_off = SubResource( 3 )
anims/bazooka_on = SubResource( 4 )
anims/close = SubResource( 2 )
anims/open = SubResource( 1 )

[connection signal="pressed" from="ToggleVisibilityButton" to="." method="_on_ToggleVisibilityButton_pressed"]
[connection signal="toggled" from="BazookaButton" to="." method="_on_BazookaButton_toggled"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
